--- a/ragna-docker.toml
+++ b/ragna-docker.toml
@@ -1,22 +1,28 @@
-local_cache_root = "/var/ragna"
-document = "ragna.core.LocalDocument"
+local_root = "/var/ragna"
+
 authentication = "ragna.deploy.RagnaDemoAuthentication"
 
-[components]
+document = "ragna.core.LocalDocument"
+
 source_storages = [
     "ragna.source_storages.Chroma",
     "ragna.source_storages.RagnaDemoSourceStorage",
     "ragna.source_storages.LanceDB"
 ]
+
 assistants = [
     "ragna.assistants.RagnaDemoAssistant"
 ]
 
 [api]
-url = "http://0.0.0.0:31476"
+hostname = "0.0.0.0"
+port = 31476
+url = "http://localhost:31476"
 origins = ["http://localhost:31477"]
 database_url = "sqlite:////var/ragna/ragna.db"
+root_path = ""
 
 [ui]
-url = "http://0.0.0.0:31477"
+hostname = "0.0.0.0"
+port = 31477
 origins = ["http://localhost:31477"]
