--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -7,7 +7,6 @@ dependencies:
   - git-lfs
   - pip:
       - python-dotenv
-      - boto3
       - pytest >=6
       - pytest-mock
       - mypy ==1.6.1
@@ -22,5 +21,5 @@ dependencies:
       - mkdocstrings[python]
       - mkdocs-gen-files
       - material-plausible-plugin
-      - mktestdocs
+      - mkdocs-gallery >=0.10
       - mdx_truly_sane_lists
