--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,10 +22,12 @@ classifiers = [
 requires-python = ">=3.9"
 dependencies = [
     "aiofiles",
+    "bokeh",
     "emoji",
     "fastapi",
     "httpx",
     "importlib_metadata>=4.6; python_version<'3.10'",
+    "jinja2",
     "packaging",
     "panel==1.3.8",
     "pydantic>=2",
@@ -70,7 +72,7 @@ version_scheme = "release-branch-semver"
 local_scheme = "node-and-timestamp"
 
 [project.scripts]
-ragna = "ragna.__main__:app"
+ragna = "ragna.__main__:cli"
 
 [tool.setuptools.packages.find]
 include = [
