--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,7 +77,7 @@ include = [
     "ragna*",
 ]
 
-[tool.ruff]
+[tool.ruff.lint]
 select = [
     "E",
     "F",
@@ -87,7 +87,7 @@ select = [
 # Ignore line too long, because due to black, the error can only occur for strings
 ignore = ["E501"]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 # ignore unused imports and imports not at the top of the file in __init__.py files
 "__init__.py" = ["F401", "E402"]
 # The examples often have imports below the top of the file to follow the narrative
