Update documentation and examples to use a new sample text file; remove old sample text file
The changes include:

- Definition of `SAMPLE_CONTENT` in `ragna._docs`
- Creation of `ragna.txt` document when running tutorials
- Add new `ragna.txt` to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,9 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
+# Documentation Helper
+ragna.txt
+
 # Unit test / coverage reports
 htmlcov/
 .tox/
