--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -10,14 +10,15 @@ dependencies:
       - pytest >=6
       - pytest-mock
       - pytest-asyncio
+      - pytest-httpx
+      - pytest-playwright
+      - playwright
       - mypy ==1.10.0
       - pre-commit
       - types-aiofiles
       - sqlalchemy-stubs
       - setuptools-scm
       - pip-tools
-      - pytest-playwright
-      - playwright
       # documentation
       - mkdocs
       - mkdocs-material
