--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,10 +70,8 @@ testpaths = [
 filterwarnings = [
     "error",
     "ignore::ResourceWarning",
-    # httpx 0.27.0 deprecated some functionality that the test client of starlette /
-    # FastApi use. This should be resolved by the next release of these libraries.
-    # See https://github.com/encode/starlette/issues/2524
-    "ignore:The 'app' shortcut is now deprecated:DeprecationWarning",
+    # https://github.com/lancedb/lancedb/issues/1296
+    "ignore:Function 'semver.parse_version_info' is deprecated:DeprecationWarning"
 ]
 xfail_strict = true
 
