--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,10 @@ dependencies = [
     "httpx",
     "importlib_metadata>=4.6; python_version<'3.10'",
     "packaging",
-    "panel==1.4.2",
+    # FIXME: pin them to released versions
+    # pip install git+https://github.com/bokeh/bokeh-fastapi.git@refactor git+https://github.com/holoviz/panel.git@main
+    "bokeh-fastapi",
+    "panel",
     "pydantic>=2",
     "pydantic-core",
     "pydantic-settings>=2",
