--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -18,7 +18,7 @@ runs:
       with:
         miniforge-variant: Mambaforge
         miniforge-version: latest
-        activate-environment: ragna-dev
+        activate-environment: ragna-deploy-dev
 
     - name: Display conda info
       shell: bash -el {0}
