--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -58,6 +58,13 @@ runs:
       shell: bash -el {0}
       run: mamba install --yes --channel conda-forge redis-server
 
+    - name: Install dev dependencies
+      shell: bash -el {0}
+      run: |
+        pip install \
+          git+https://github.com/bokeh/bokeh-fastapi.git@refactor \
+          git+https://github.com/holoviz/panel.git@main
+
     - name: Install ragna
       shell: bash -el {0}
       run: |
