--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,9 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-          - windows-latest
+          # FIXME
+          # Building panel from source on Windows does not work through pip
+          # - windows-latest
           - macos-latest
         python-version: ["3.9"]
         include:
