--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
 requires = [
-    "setuptools>=45",
-    "setuptools_scm[toml]>=6.2",
+    "setuptools>=64",
+    "setuptools_scm[toml]>=8",
 ]
 build-backend = "setuptools.build_meta"
 
@@ -23,11 +23,14 @@ requires-python = ">=3.9"
 dependencies = [
     "aiofiles",
     "emoji",
+    "eval_type_backport; python_version<'3.10'",
     "fastapi",
     "httpx",
     "importlib_metadata>=4.6; python_version<'3.10'",
     "packaging",
-    "panel==1.4.2",
+    # FIXME: pin them to released versions
+    "bokeh-fastapi",
+    "panel",
     "pydantic>=2",
     "pydantic-core",
     "pydantic-settings>=2",
@@ -142,6 +145,9 @@ disallow_incomplete_defs = false
 
 [[tool.mypy.overrides]]
 module = [
+    # FIXME: the package should be typed
+    "bokeh_fastapi",
+    "bokeh_fastapi.handler",
     "docx",
     "fitz",
     "ijson",
@@ -150,6 +156,7 @@ module = [
     "pptx",
     "pyarrow",
     "sentence_transformers",
+    "traitlets",
 ]
 ignore_missing_imports = true
 
