Temporarily run build workflow on PRs

--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -1,9 +1,10 @@
 name: Publish
 
 on:
-  release:
-    types:
-      - created
+  pull_request:
+  push:
+    branches:
+      - release/*
 
 jobs:
   publish:
