--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -1,4 +1,4 @@
-name: Publish
+name: Build Package
 
 on:
   pull_request:
@@ -24,8 +24,11 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install build dependencies
-        run: pip install build
+      - name: Install pipx
+        run: python -m pip install --user pipx
+
+      - name: Install build using pipx
+        run: pipx install build
 
       - name: Set BUILD_RAGNA_BASE environment variable
         run: |
@@ -38,7 +41,7 @@ jobs:
       - name: Build distribution
         run: |
           echo "Building package: ${{ matrix.package }}"
-          python -m build
+          pipx run build
 
       - name: Verify package
         run: |
