--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -24,24 +24,19 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install pipx
-        run: python -m pip install --user pipx
-
-      - name: Install build using pipx
-        run: pipx install build
-
-      - name: Set BUILD_RAGNA_BASE environment variable
+      - name: Install build dependencies
         run: |
-          if [ "${{ matrix.package }}" == "ragna-base" ]; then
-            echo "BUILD_RAGNA_BASE=1" >> $GITHUB_ENV
-          else
-            echo "BUILD_RAGNA_BASE=" >> $GITHUB_ENV
-          fi
+          python -m pip install --upgrade pip
+          python -m pip install build toml
+
+      - name: Modify pyproject.toml
+        run: python scripts/build_helper.py ${{ matrix.package }}
 
       - name: Build distribution
         run: |
           echo "Building package: ${{ matrix.package }}"
-          pipx run build
+          python -m build
+          echo "Build complete for ${{ matrix.package }}"
 
       - name: Verify package
         run: |
