--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -90,14 +90,22 @@ jobs:
         browser:
           - chromium
           - firefox
-        python-version: ["3.9"]
+        python-version:
+          - 3.9
+          - 3.10
+          - 3.11
+        exclude:
+          - python-version: 3.10
+            os: windows-latest
+          - python-version: 3.11
+            os: windows-latest
+          - python-version: 3.10
+            os: macos-latest
+          - python-version: 3.11
+            os: macos-latest
         include:
-          - os: macos-latest
-            browser: webkit
-          - os: ubuntu-latest
-            python-version: "3.10"
-          - os: ubuntu-latest
-            python-version: "3.11"
+          - browser: webkit
+            os: macos-latest
 
       fail-fast: false
 
