--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -91,21 +91,22 @@ jobs:
           - chromium
           - firefox
         python-version:
-          - 3.9
-          - 3.10
-          - 3.11
+          - "3.9"
+          - "3.10"
+          - "3.11"
         exclude:
-          - python-version: 3.10
+          - python-version: "3.10"
             os: windows-latest
-          - python-version: 3.11
+          - python-version: "3.11"
             os: windows-latest
-          - python-version: 3.10
+          - python-version: "3.10"
             os: macos-latest
-          - python-version: 3.11
+          - python-version: "3.11"
             os: macos-latest
         include:
           - browser: webkit
             os: macos-latest
+            python-version: "3.9"
 
       fail-fast: false
 
