--- a/.github/workflows/update-docker-requirements.yml
+++ b/.github/workflows/update-docker-requirements.yml
@@ -6,6 +6,7 @@ on:
       - ".github/workflows/update-docker-requirements.yml"
       - "pyproject.toml"
       - "requirements-docker.lock"
+      - "requirements-optional.txt"
   workflow_dispatch:
 
 permissions:
@@ -37,7 +38,7 @@ jobs:
           pip-compile \
             --quiet \
             --strip-extras --output-file=requirements-docker.lock \
-            --extra=all pyproject.toml
+            pyproject.toml requirements-optional.txt
 
           NEEDS_UPDATE=$(git diff --quiet && echo 'false' || echo 'true')
           echo "needs-update=${NEEDS_UPDATE}" | tee --append $GITHUB_OUTPUT
