#458 Disable running workflow on PRs & enable push on main

--- a/.github/workflows/update-docker-requirements.yml
+++ b/.github/workflows/update-docker-requirements.yml
@@ -1,12 +1,9 @@
 name: docker-requirements
 
 on:
-  pull_request:
-    paths:
-      - ".github/workflows/update-docker-requirements.yml"
-      - "pyproject.toml"
-      - "requirements-docker.lock"
-  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 permissions:
   pull-requests: write
