--- a/.github/workflows/update-docker-requirements.yml
+++ b/.github/workflows/update-docker-requirements.yml
@@ -28,6 +28,9 @@ jobs:
           python-version: "3.11"
           optional-dependencies: "false"
 
+      - name: Install GitHub CLI
+        run: sudo apt-get install gh
+
       - name: Update docker requirements
         id: update
         run: |
@@ -38,6 +41,14 @@ jobs:
 
           NEEDS_UPDATE=$(git diff --quiet && echo 'false' || echo 'true')
           echo "needs-update=${NEEDS_UPDATE}" | tee --append $GITHUB_OUTPUT
+
+      - name: Get last merged PR info
+        id: pr_info
+        run: |
+          LAST_MERGED_PR=$(gh pr list --repo $GITHUB_REPOSITORY --state closed --json number --jq '.[0].number')
+          PR_INFO=$(gh pr view $LAST_MERGED_PR --repo $GITHUB_REPOSITORY --json author,mergedBy --jq '{author: .author.login, mergedBy: .mergedBy.login}')
+          echo "pr_author=$(echo $PR_INFO | jq -r .author)" >> $GITHUB_ENV
+          echo "pr_mergedBy=$(echo $PR_INFO | jq -r .mergedBy)" >> $GITHUB_ENV
 
       - name: Open a PR to update the requirements
         # prettier-ignore
@@ -53,7 +64,7 @@ jobs:
           # prettier-ignore
           body:
             https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
-          reviewers: ${{ github.actor }}
+          reviewers: ${{ env.pr_author }},${{ env.pr_mergedBy }}
 
       - name: Show diff
         # prettier-ignore
