--- a/.github/workflows/update-docker-requirements.yml
+++ b/.github/workflows/update-docker-requirements.yml
@@ -87,31 +87,10 @@ jobs:
             ${{ steps.pr-check.outputs.author != 'none' && format('cc @{0}', steps.pr-check.outputs.author) || '' }}
           reviewers: ${{ steps.pr-check.outputs.merger }}
 
-  notify-failure:
-    runs-on: ubuntu-latest
-    needs: update
-    if: failure()
-    steps:
       - name: Create failure issue
-        uses: actions/github-script@v6
+        if: failure()
+        uses: JasonEtco/create-an-issue@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const issueTitle = 'Workflow Failure: docker-requirements';
-            const issueBody = `The workflow 'docker-requirements' has failed.
-            Please check the details at: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
-            `;
-            const { data: issues } = await github.issues.listForRepo({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              state: 'open'
-            });
-            const existingIssue = issues.find(issue => issue.title === issueTitle);
-            if (!existingIssue) {
-              await github.issues.create({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                title: issueTitle,
-                body: issueBody
-              });
-            }
+          filename: .github/ISSUE_TEMPLATE/DOCKER_ISSUE_TEMPLATE.md
