try docker requirements update

--- a/.github/workflows/update-docker-requirements.yml
+++ b/.github/workflows/update-docker-requirements.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - test-ci
     paths:
       - ".github/workflows/update-docker-requirements.yml"
       - "pyproject.toml"
