try fix credentials

--- a/.github/workflows/update-docker-requirements.yml
+++ b/.github/workflows/update-docker-requirements.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Check if commit is associated with a PR
         id: pr-check
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: ${{ github.token }}
         run: |
           PR_NUMBER=$(gh api \
             -H 'Accept: application/vnd.github+json' \
@@ -81,6 +81,6 @@ jobs:
         if: failure()
         uses: JasonEtco/create-an-issue@v2
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
         with:
           filename: .github/ISSUE_TEMPLATE/DOCKER_ISSUE_TEMPLATE.md
