--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,13 +19,12 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
 ]
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 dependencies = [
     "aiofiles",
     "emoji",
     "fastapi",
     "httpx",
-    "importlib_metadata>=4.6; python_version<'3.10'",
     "packaging",
     "panel==1.4.4",
     "pydantic>=2",
@@ -96,6 +95,7 @@ ignore = ["E501"]
 [tool.pytest.ini_options]
 minversion = "6.0"
 addopts = "-ra --tb=short --asyncio-mode=auto"
+asyncio_default_fixture_loop_scope = "function"
 testpaths = [
     "tests",
 ]
