--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,9 +102,9 @@ testpaths = [
 filterwarnings = [
     "error",
     "ignore::ResourceWarning",
-    "ignore:Type google._upb._message:DeprecationWarning",
     # https://github.com/lancedb/lancedb/issues/1296
-    "ignore:Function 'semver.parse_version_info' is deprecated:DeprecationWarning"
+    "ignore:Function 'semver.parse_version_info' is deprecated:DeprecationWarning",
+    "ignore:Type google._upb._message:DeprecationWarning",
 ]
 xfail_strict = true
 
