--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,7 +104,10 @@ filterwarnings = [
     "ignore::ResourceWarning",
     # https://github.com/lancedb/lancedb/issues/1296
     "ignore:Function 'semver.parse_version_info' is deprecated:DeprecationWarning",
+    # chromadb -> opentelemetry -> google
     "ignore:Type google._upb._message:DeprecationWarning",
+    # chromadb
+    "ignore:Python 3.14 will:DeprecationWarning"
 ]
 xfail_strict = true
 
