--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,13 +19,12 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
 ]
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 dependencies = [
     "aiofiles",
     "emoji",
     "fastapi",
     "httpx",
-    "importlib_metadata>=4.6; python_version<'3.10'",
     "packaging",
     "panel==1.4.4",
     "pydantic>=2",
@@ -96,6 +95,7 @@ ignore = ["E501"]
 [tool.pytest.ini_options]
 minversion = "6.0"
 addopts = "-ra --tb=short --asyncio-mode=auto"
+asyncio_default_fixture_loop_scope = "function"
 testpaths = [
     "tests",
 ]
@@ -103,7 +103,11 @@ filterwarnings = [
     "error",
     "ignore::ResourceWarning",
     # https://github.com/lancedb/lancedb/issues/1296
-    "ignore:Function 'semver.parse_version_info' is deprecated:DeprecationWarning"
+    "ignore:Function 'semver.parse_version_info' is deprecated:DeprecationWarning",
+    # chromadb -> opentelemetry -> google
+    "ignore:Type google._upb._message:DeprecationWarning",
+    # chromadb
+    "ignore:Python 3.14 will:DeprecationWarning"
 ]
 xfail_strict = true
 
