--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -59,10 +59,7 @@ runs:
 
     - name: Install dev dependencies
       shell: bash -el {0}
-      run: |
-        pip install \
-          git+https://github.com/bokeh/bokeh-fastapi.git@main \
-          git+https://github.com/holoviz/panel@fastapi_serve
+      run: pip install --pre panel[fastapi]
 
     - name: Install ragna
       shell: bash -el {0}
