use bokeh_fastapi through panel (#503)
Co-authored-by: Kim Pevey <kcpevey@quansight.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,21 +15,22 @@ authors = [
 readme = "README.md"
 classifiers = [
     "Development Status :: 4 - Beta",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
 ]
 requires-python = ">=3.10"
 dependencies = [
     "aiofiles",
+    # Remove this and instead depend on panel[fastapi]
+    # after https://github.com/holoviz/panel/pull/7495 is released
+    "bokeh_fastapi==0.1.1",
     "emoji",
     "eval_type_backport; python_version<'3.10'",
     "fastapi",
     "httpx",
     "packaging",
-    # FIXME: pin them to released versions
-    "bokeh-fastapi",
-    "panel",
+    "panel==1.5.4",
     "pydantic>=2",
     "pydantic-core",
     "pydantic-settings>=2",
