Revert "debug windows CI failure"
This reverts commit dc7595d18dde0a0a78fabfb3e6609a86245c6ba4.

--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -54,10 +54,7 @@ runs:
 
     - name: Install playwright
       shell: bash -el {0}
-      run: |
-        ls -la "${CONDA_PREFIX}/bin"
-        python -m playwright --help
-        playwright install
+      run: playwright install
 
     - name: Install ragna
       shell: bash -el {0}
