--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        shell: bash -el {0}
+        shell: bash -elo pipefail {0}
 
     steps:
       - name: Checkout repository
@@ -53,7 +53,7 @@ jobs:
 
     defaults:
       run:
-        shell: bash -el {0}
+        shell: bash -elo pipefail {0}
 
     steps:
       - name: Checkout repository
@@ -113,7 +113,7 @@ jobs:
 #
 #    defaults:
 #      run:
-#        shell: bash -el {0}
+#        shell: bash -elo pipefail {0}
 #
 #    steps:
 #      - name: Checkout repository
